src/app/user-details/user-details.component.css
.main {
    margin: 7px 0 0 5%;
}

a {
    color: var(--primary-color);
    text-decoration: none;
}

.profile-pic {
    height: 150px;
    width: 150px;
}

#head {
    padding: 15px 15px 0 20px;
    margin-bottom: 14px;
}

.body-cards {
    padding: 0 2px;
    margin-top: 0;
    margin-bottom: 20px;
}

.body {
    display: inline-block;
    width: 320px;
}

#info-header {
    margin: 20px 0 0 0;
}

#info-header .sub-name {
    font-weight: 200;
    font-size: 1.1em;
}

.follow-sec {
    margin: 2px;
}

.follow-sec .rl-header {
    margin-bottom: 15px;
    margin-left: 18px;
}

@media (max-width: 768px) {
    #head {
        display: flex;
    }

    .body {
        display: block;
        width: auto;
    }

    .profile-pic {
        height: 100px;
        width: 100px;
        flex: 0 0 100px;
    }

    #info-header {
        margin: 12px 0 0 3%;
    }

    .main {
        margin: 0;
    }
}

